# iran-voice-bot

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  start.sh
config/: targets.py
data/: targets.json
handlers/: email_gen.py  menu.py
server/: server.py
services/: ai_service.py
